base de datos funcionando

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,7 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:Alquila;DB_CLOSE_DELAY=-1;TRACE_LEVEL_SYSTEM_OUT=2;INIT=CREATE SCHEMA IF NOT EXISTS xxx\\;SET SCHEMA xxx
 spring.datasource.username=sa
 spring.datasource.password=
+
+
+
+server.port=9002
