se activo la Interfaz grafica de H2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,8 @@ spring.datasource.password=
 
 
 server.port=9002
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/console
+spring.h2.console.settings.trace=false
+spring.h2.console.settings.web-allow-others=false
